# BlackSignal-WASM

./: README.md
backend/: Cargo.toml
backend/src/: appstate.rs  main.rs  message_structs.rs  structs.rs  websocket.rs
frontend/: Cargo.toml  index.html  index.scss
frontend/src/: login.rs  main.rs
frontend/src/pages/: create_login.rs  home.rs  login.rs
frontend/src/structs/: message_structs.rs
