[package]
name = "black_signal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.1"
actix-files = "0.6.2"
actix-web = {version = "4.4.0", features = ["macros"] }
actix-web-actors = "4.2.0"
actix-web-lab = "0.20.2"
actix-session = { version = "0.9.0", features = ["redis-actor-session", "redis-rs-session"] }
actix-cors = "0.7.0"


parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }

uuid = { version = "1.6.1", features = ["serde", "v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
jsonwebtoken = "9.2.0"

surrealdb = "1.0.2"
validator = { version = "0.16.1", features = ["derive"] }
anyhow = "1.0.78"
bcrypt = "0.15.0"
rand = "0.8.5"
names = { version = "0.14.0", default-features = false }
log = "0.4.20"
env_logger = "0.9.0"

local-ip-address = "0.5.7"
#reqwest = "0.11"